# arrow_stuff

./: Dockerfile
src/: CMakeLists.txt  acero_basics.cc  acero_sharded_source.cc  flight_client_basics.cc  flight_server_basics.cc  sql_basics.cc  table_basics.cc
src/flight_sharded/: CMakeLists.txt  client.cc  flight_server_shard.cc
src/flight_sharded/data/: products_0.csv  products_1.csv
src/sqlite/: CMakeLists.txt  translate.cc
